objects/Tracked_Lot__c.object
<CustomObject>
    <description>Junction object between Lot Tracker and Manufacturing Lot. Contains additional field used for reporting purposes.</description>
    <fields>
        <fullName>Account_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Fab_Out_Date_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Actual_Fab_Out_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Fab Out Date (ML)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternative_Hold_Reason_ML__c</fullName>
        <formula>TEXT(Manufacturing_Lot__r.Alternate_Hold_Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternative Hold Reason (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BEOL_Progress_ML__c</fullName>
        <formula>Manufacturing_Lot__r.BEOL_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BEOL Progress (ML)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Committed_DPML_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Committed_DPML__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committed DPML (ML)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_CRD_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Current_Customer_Request_Date_CRD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current CRD (ML)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_CSD_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Current_Scheduled_Date_CSD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current CSD (ML)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Mask_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Current_Mask_Layer_Being_Processed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mask (ML)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Stage_ML__c</fullName>
        <formula>if( Fab_ML__c==(&apos;FAB 1&apos;), 
 Manufacturing_Lot__r.Stage_Id__c ,
 Manufacturing_Lot__r.Stage_Id__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Stage (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Step_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Current_Step_Being_Processed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Step (ML)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPML_Bullet_Rocket_Cycle_FC__c</fullName>
        <formula>IF(
    Manufacturing_Lot__r.Current_Wafer_Quantity_In_Lot__c &lt; 13,
    Fab_Cycle_Time_Table__r.DPML_Bullet_Cycle_Half_Lot__c,
    Fab_Cycle_Time_Table__r.DPML_Bullet_Cycle_Full_Lot__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPML Bullet/Rocket Cycle (FC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPML_Hand_Carry_Cycle_FC__c</fullName>
        <formula>IF(
Manufacturing_Lot__r.Current_Wafer_Quantity_In_Lot__c &lt; 13,
Fab_Cycle_Time_Table__r.DPML_Hand_Carry_Cycle_Half_Lot__c,
Fab_Cycle_Time_Table__r.DPML_Hand_Carry_Cycle_Full_Lot__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPML Hand Carry Cycle (FC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPML_Hot_Cycle_FC__c</fullName>
        <formula>IF(
Manufacturing_Lot__r.Current_Wafer_Quantity_In_Lot__c &lt; 13,
Fab_Cycle_Time_Table__r.DPML_Hot_Cycle_Half_Lot__c,
Fab_Cycle_Time_Table__r.DPML_Hot_Cycle_Full_Lot__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPML Hot Cycle (FC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPML_Standard_Cycle_FC__c</fullName>
        <formula>IF(
Manufacturing_Lot__r.Current_Wafer_Quantity_In_Lot__c &lt; 13,
Fab_Cycle_Time_Table__r.DPML_Standard_Cycle_Half_Lot__c ,
Fab_Cycle_Time_Table__r.DPML_Standard_Cycle_Full_Lot__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPML Standard Cycle (FC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Id_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Device_ID_MES__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Id (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Device for the Lot</description>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Tracked Lots</relationshipLabel>
        <relationshipName>Tracked_Lots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Display in Report</inlineHelpText>
        <label>Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fab_Cycle_Time_Effective_Quarter_FC__c</fullName>
        <formula>TEXT(Fab_Cycle_Time_Table__r.Effective_Quarter__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fab Cycle Time Effective Quarter (FC)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fab_Cycle_Time_Table__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fab Cycle Time Table</label>
        <referenceTo>Fab_Cycle_Time_Table__c</referenceTo>
        <relationshipLabel>Tracked Lots</relationshipLabel>
        <relationshipName>Tracked_Lots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fab_ML__c</fullName>
        <formula>TEXT(Manufacturing_Lot__r.Fab_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fab (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fabout_If_Bullet_Rocket__c</fullName>
        <formula>IF( 
Manufacturing_Lot__r.Current_Wafer_Quantity_In_Lot__c &lt; 13,
Today() + ( Fab_Cycle_Time_Table__r.DPML_Bullet_Cycle_Half_Lot__c * Remaining_Mask_Count__c ),
Today() + ( Fab_Cycle_Time_Table__r.DPML_Bullet_Cycle_Full_Lot__c * Remaining_Mask_Count__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabout If Bullet/Rocket</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fabout_If_Standard_LR__c</fullName>
        <formula>IF(
Manufacturing_Lot__r.Current_Wafer_Quantity_In_Lot__c &lt; 13,
Today() + ( Fab_Cycle_Time_Table__r.DPML_Standard_Cycle_Half_Lot__c  * Remaining_Mask_Count__c ),
Today() + ( Fab_Cycle_Time_Table__r.DPML_Standard_Cycle_Full_Lot__c   * Remaining_Mask_Count__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabout If Standard (LR)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fabout_Quantity_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Fabout_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabout Quantity (ML)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fabout_if_Hand_Carry_Super_Rocked_LR__c</fullName>
        <formula>IF( 
Manufacturing_Lot__r.Current_Wafer_Quantity_In_Lot__c &lt; 13,
Today() + ( Fab_Cycle_Time_Table__r.DPML_Hand_Carry_Cycle_Half_Lot__c * Remaining_Mask_Count__c ),
Today() + ( Fab_Cycle_Time_Table__r.DPML_Hand_Carry_Cycle_Full_Lot__c * Remaining_Mask_Count__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabout if Hand Carry/Super Rocked (LR)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fabout_if_Hot_LR__c</fullName>
        <formula>IF( 
Manufacturing_Lot__r.Current_Wafer_Quantity_In_Lot__c &lt; 13, 
Today() + ( Fab_Cycle_Time_Table__r.DPML_Hot_Cycle_Half_Lot__c  * Remaining_Mask_Count__c ),
Today() + ( Fab_Cycle_Time_Table__r.DPML_Hot_Cycle_Full_Lot__c * Remaining_Mask_Count__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabout if Hot (LR)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Metal_Layer__c</fullName>
        <inlineHelpText>First Metal Layer. To be entered by PIYE.</inlineHelpText>
        <label>First Metal Layer</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GDPW__c</fullName>
        <label>GDPW</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <formula>Manufacturing_Lot__r.Process_Id__r.Tech_Geometry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geometry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Create_Date_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Lot_Create_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Create Date (ML)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lot_Priority_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Lot_Priority__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Priority (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Start_Date_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Lot_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Start Date (ML)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lot_State_ML__c</fullName>
        <formula>TEXT(Manufacturing_Lot__r.Lot_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot State (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Tracker__c</fullName>
        <label>Lot Tracker</label>
        <referenceTo>Lot_Tracker__c</referenceTo>
        <relationshipLabel>Tracked Lots</relationshipLabel>
        <relationshipName>Tracked_Lots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Lot_Type_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Lot_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Type (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Process_Id_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Main_Process_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Process Id (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Lot</label>
        <referenceTo>Manufacturing_Lot__c</referenceTo>
        <relationshipLabel>Tracked Lots</relationshipLabel>
        <relationshipName>Tracked_Lots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSD_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Original_Scheduled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OSD (ML)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <formula>Manufacturing_Lot__r.Purchase_Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Placing_Lot_Hold_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Person_Placing_Lot_Hold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Placing Lot Hold (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Person_Placing_Lot_Hold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Start Date (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_ROM_Bank_Mask_Count_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Post_ROM_Bank_Mask_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post ROM Bank Mask Count (ML)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_ROM_Bank_Process_Id_ML_Id__c</fullName>
        <formula>Manufacturing_Lot__r.Post_ROM_Bank_Process_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post ROM Bank Process Id (ML) Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_ROM_Bank_Mask_Count_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Pre_ROM_Bank_Mask_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre ROM Bank Mask Count (ML)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_ROM_Bank_Process_Id__c</fullName>
        <formula>Manufacturing_Lot__r.Pre_ROM_Bank_Process_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre ROM Bank Process Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Node_DEV__c</fullName>
        <formula>TEXT( Device__r.Opportunity2__r.Target_Process_Node__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Node (DEV)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_State_ML__c</fullName>
        <formula>TEXT(Manufacturing_Lot__r.Processing_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processing State (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Product_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Id  (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Purchase_Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Order Number (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTY_Description__c</fullName>
        <label>QTY Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROM_Flag_ML__c</fullName>
        <formula>Manufacturing_Lot__r.ROM_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROM Flag (ML)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROM_Release_Time_ML__c</fullName>
        <formula>Manufacturing_Lot__r.ROM_Release_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROM Release Time (ML)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ROM_Step_Begin_Time_ML__c</fullName>
        <formula>Manufacturing_Lot__r.ROM_Step_Begin_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROM Step Begin Time (ML)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remaining_Mask_Count__c</fullName>
        <formula>Total_Mask_Count_ML__c - Current_Mask_ML__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Mask Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reticle_ETA__c</fullName>
        <label>Reticle ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Number_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Sales_Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO Number (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Customer_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Ship_to_Customer_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Customer (ML)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_to_Wafer_Quantity_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Ship_to_Wafer_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Wafer Quantity (ML)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Stage_Id_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Stage_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Id (ML)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Procedure_Id__c</fullName>
        <formula>Manufacturing_Lot__r.Stage_Procedure_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Procedure Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Lot_Quantity_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Start_Lot_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Lot Quantity (ML)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TO_DEV__c</fullName>
        <formula>Device__r.Actual_Tapeout_Date_GMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TO (DEV)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tapeout_Date__c</fullName>
        <label>Tapeout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_BEOL_Count_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Total_BEOL_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total BEOL Count (ML)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_FEOL_Count_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Total_FEOL_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total FEOL Count (ML)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Mask_Count_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Total_Mask_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Mask Count (ML)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Stages_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Last_Stage_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Stages (ML)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Steps_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Last_Step_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Steps (ML)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Retrofit</fullName>
                </value>
                <value>
                    <fullName>Test Chip</fullName>
                </value>
                <value>
                    <fullName>Skew</fullName>
                </value>
                <value>
                    <fullName>Proto</fullName>
                </value>
                <value>
                    <fullName>MPW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueField__c</fullName>
        <description>Field for maintaining the uniquess Manufacturing Lots among the Tracked Lots for  records selected under a particular Lot Tracker record.</description>
        <label>UniqueField</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Wafer_Lot_Progress_ML__c</fullName>
        <formula>Manufacturing_Lot__r.Wafer_Lot_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wafer Lot Progress (ML)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Tracked Lot</label>
    <nameField>
        <displayFormat>TL-{000000}</displayFormat>
        <label>Tracked Lot Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracked Lots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>